--- a/web/nosequels/package.json
+++ b/web/nosequels/package.json
@@ -32,5 +32,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1",
     "morgan": "^1.9.1"
-  }
+  },
+    "devDependencies": {
+      "nodemon": "^1.18.10"
+    }
 }
