adds workdir and removes volumes

--- a/web/nosequels/docker-compose.yml
+++ b/web/nosequels/docker-compose.yml
@@ -2,34 +2,26 @@ version: "3"
 
 services:
   nodejs:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: nodejs
+    image: node
     container_name: nosql_challenge
     restart: unless-stopped
     ports:
       - "31030:3000"
     volumes:
       - .:/home/node/app
-      - node_modules:/home/node/app/node_modules
     networks:
       - challenge-network
-    command: ./wait-for.sh db:27017 -- /home/node/app/node_modules/.bin/nodemon app.js
+    working_dir: /home/node/app
+    command: ./wait-for.sh db:27017 -- npm run dev
 
   db:
     image: mongo:4.1.8-xenial
     container_name: db
-    restart: unless-stopped
     volumes:
-      - data:/data/db
+      - ./data:/data/db
     networks:
       - challenge-network
 
 networks:
   challenge-network:
     driver: bridge
-
-volumes:
-  data:
-  node_modules:
