Adds engine version to package.json

--- a/nosequels/package.json
+++ b/nosequels/package.json
@@ -2,6 +2,9 @@
   "name": "nosequels",
   "version": "1.0.0",
   "description": "A simple nosql vulnerable app",
+  "engines": {
+  	"node": "12.x"
+  },
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
